add QueryResolver to test jar scanning